--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h4 class="text-capitalize"><kbd>School Temple</kbd></h4>
           <hr>
           <h5 class="text-success text-capitalize">was Established in 1978</h5>
-          <p class="text-muted">Write something about the mentioned place
+          <p class="text-muted">The higher class stundents will go to wirte exam.
           </p>
         </div>
       </center>
@@ -50,7 +50,7 @@
         <h4 class="text-capitalize"><kbd>School Library</kbd></h4>
         <hr>
         <h5 class="text-success text-capitalize">was build in 1980</h5>
-        <p class="text-muted">Write something about the mentioned place
+        <p class="text-muted"> the library has more books like story,history,ect.
         </p>
       </div>
     </center>
@@ -60,7 +60,7 @@
           <h4 class="text-capitalize"><kbd>School Auditorium</kbd></h4>
           <hr>
           <h5 class="text-success text-capitalize">was build in 1982</h5>
-          <p class="text-muted">Write something about the mentioned place
+          <p class="text-muted">In Auditorium we will do yoga on tuesday.
           </p>
         </div>
       </center>
@@ -68,24 +68,24 @@
 </section>
 <section id="Achievements">
   <h2 class="page-header" id="Achievements">School Achievements</h2>
-      <div class="bg-primary movies_head" data-toggle="collapse" data-target="#school_achievement1">
-        Inter School debate On Environment Pollution<i class="fa fa-sort-desc"></i>
+      <div class="bg-primary achievement_head" data-toggle="collapse" data-target="#school_achievement1">
+        Inter School debate On tirrukural<i class="fa fa-sort-desc"></i>
       </div>
       <div id="school_achievement1" class="collapse">
         <div class="achievement_text">
           <img src="se1.jpg" class="img-responsive img-thumbnail">
-          <h5 class="text-success text-capitalize">won first prize in inter school Debate On Environment Pollution
+          <h5 class="text-success text-capitalize">won first prize in inter school Debate On Tirrukural
             <span class="glyphicon glyphicon-star star1"></span>
             <span class="glyphicon glyphicon-star star1"></span>
             <span class="glyphicon glyphicon-star star1"></span>
             <span class="glyphicon glyphicon-star star1"></span>
             <span class="glyphicon glyphicon-star star1"></span>
-           <p>write about this achievement.</p>
+           <p>we said 20 Tirrukural.</p>
           </h5>
         </div>
       </div>
       <br>
-      <div class="bg-primary movies_head" data-toggle="collapse" data-target="#school_achievement2">
+      <div class="bg-primary achievement_head" data-toggle="collapse" data-target="#school_achievement2">
         Inter School Football Competition<i class="fa fa-sort-desc"></i>
       </div>
       <div id="school_achievement2" class="collapse">
@@ -97,12 +97,12 @@
             <span class="glyphicon glyphicon-star star1"></span>
             <span class="glyphicon glyphicon-star star1"></span>
             <span class="glyphicon glyphicon-star star1"></span>
-           <p>write about this achievement.</p>
+           <p>8 grade students go to other and play the matches.</p>
           </h5>
         </div>
       </div>
       <br>
-      <div class="bg-primary movies_head" data-toggle="collapse" data-target="#school_achievement3">
+      <div class="bg-primary achievement_head" data-toggle="collapse" data-target="#school_achievement3">
         Inter School Science Project Competition<i class="fa fa-sort-desc"></i>
       </div>
       <div id="school_achievement3" class="collapse">
@@ -114,7 +114,7 @@
             <span class="glyphicon glyphicon-star star1"></span>
             <span class="glyphicon glyphicon-star star1"></span>
             <span class="glyphicon glyphicon-star star1"></span>
-           <p>write about this achievement.</p>
+           <p> we do fruit salad in Inter School Science Project Competition.</p>
           </h5>
         </div>
       </div>
